Added test posts

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
-  --color-primary: #005b99;
+  --color-primary: #6b55e7;
   --color-text: #2e353f;
   --color-text-light: #4f5969;
   --color-heading: #1a202c;
@@ -291,6 +291,16 @@ a:focus {
   margin-bottom: var(--spacing-16);
 }
 
+.bio.-bordered {
+  padding: 35px 40px;
+  border: 1px solid var(--color-primary);
+  border-radius: 4px;
+}
+
+.bio strong {
+  color: var(--color-primary);
+}
+
 .bio p {
   margin-bottom: var(--spacing-0);
 }
@@ -300,6 +310,16 @@ a:focus {
   margin-bottom: var(--spacing-0);
   min-width: 50px;
   border-radius: 100%;
+}
+
+@media only screen and (max-width: 500px) {
+  .bio.-bordered {
+    padding: 15px;
+  }
+
+  .bio-avatar {
+    display: none !important;
+  }
 }
 
 .blog-post header h1 {
